Edit landing pages: updated content and layout

--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
-    "astro": "^5.7.12",
+    "astro": "^5.8.0",
     "tailwindcss": "^4.1.5"
-  }
+  },
+  "description": "<h1>AgenceX Landing page</h1>",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
