--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "optimize-images": "node scripts/optimize-images.js"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.8.0",
+    "sharp": "^0.34.2",
     "tailwindcss": "^4.1.5"
   },
   "description": "<h1>AgenceX Landing page</h1>",
